Improvements, Bugfixes and a User Management UI
- Adding basic user management.
    - Adding a basic user management UI. Allow adding, changing, deleting users and reset passwords.
    - Adding `add_admin` management command.
    - Fixing `can_user_edit` to actually match the editors (even this feature isn't implemented yet.)
    - Fixing the view structure with a central "home" and an admin and user area.
    - Fixing breadcrumbs for the new structure.
    - Make the login button on the welcome screen bigger.
    - Remove the now obsolete django admin views.
- Protecting the `reset_test_db` command.
    - Prevent `reset_test_db` from being used when not in debug mode.
    - Adding the required argument `--erase_database` as additional protection for the curious admin.
- Fixing the wrong service type.
    - Changing in the service type to `simple` in the background service example file `erbsland-former.service`.

--- a/ErbslandFormer/erbsland-former.service
+++ b/ErbslandFormer/erbsland-former.service
@@ -3,7 +3,7 @@ Description=ErbslandFORMER Celery Service
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 User=erbsland_former
 Group=erbsland_former
 WorkingDirectory=/var/www/erbsland-former/app/
